--- a/portfolio/client/src/styles/container.scss
+++ b/portfolio/client/src/styles/container.scss
@@ -1,18 +1,18 @@
 .hero {
     height: 97vh;
 }
-.about {
-    height: 90vh;
-}
+// .about {
+//     height: 90vh;
+// }
 .languages {
     height: 75vh;
 }
-.work {
-    height: 100vh;
-}
-.contact {
-    height: 100vh;
-}
+// .work {
+//     height: 100vh;
+// }
+// .contact {
+//     height: 60vh;
+// }
 
 @media only screen and (max-width: 500px) {
     .hero {
